package(default_visibility = ["//visibility:public"])
licenses(["notice"])

cc_library(
  name = "cpp_jwt",
  hdrs = glob([
    "include/jwt/*.hpp",
    "include/jwt/detail/*.hpp",
    "include/jwt/json/*.hpp",
    "include/jwt/impl/*.ipp",
  ]),
  includes = [
    "include",
  ],
  defines = [
    "CPP_JWT_USE_VENDORED_NLOHMANN_JSON",
  ]
)